--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siso-resource-collective</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>SISO AGENCY - UbahCrypt</title>
+    <meta name="description" content="SISO AGENCY Development Platform" />
+    <meta name="author" content="SISO AGENCY" />
+    <meta property="og:title" content="SISO AGENCY - UbahCrypt" />
+    <meta property="og:description" content="Build your next blockchain or crypto app with SISO AGENCY" />
+    <meta property="og:image" content="/images/siso-logo.svg" />
+    <meta property="og:url" content="https://www.siso.agency" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" href="/favicon.svg" />
   </head>
 
   <body>
