Fix import/export issues and suppress third-party script errors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta property="og:image" content="/images/siso-logo.svg" />
     <meta property="og:url" content="https://www.siso.agency" />
     <meta property="og:type" content="website" />
+    <!-- Cross-Origin-Opener-Policy helps with security and storage access -->
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin" />
+    <!-- Cross-Origin-Embedder-Policy helps with security and service workers -->
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="credentialless" />
     <link rel="icon" href="/favicon.svg" />
   </head>
 
@@ -25,6 +29,16 @@
         'https://www.siso.agency',
         'https://siso.agency'
       ];
+      
+      // Attempt to prevent third-party script errors
+      window.addEventListener('error', function(event) {
+        // Prevent errors from solanaActionsContentScript.js
+        if (event.filename && event.filename.includes('solanaActionsContentScript.js')) {
+          event.preventDefault();
+          console.warn('Suppressed error from solanaActionsContentScript.js');
+          return false;
+        }
+      }, true);
     </script>
     <!-- External scripts removed to fix rendering issues -->
     <script type="module" src="/src/main.tsx"></script>
