UI Fix Title - Remove UbahCrypt from browser tab title - Fixed: Changed 'SISO AGENCY - UbahCrypt' to just 'SISO AGENCY' - Updated: index.html title and meta tags - Enhanced: Better SEO descriptions with Scalable Intelligence Systems - Added: Dynamic portfolio page title setter

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SISO AGENCY - UbahCrypt</title>
-    <meta name="description" content="SISO AGENCY Development Platform" />
+    <title>SISO AGENCY</title>
+    <meta name="description" content="SISO AGENCY - Scalable Intelligence Systems Operator. Premium digital solutions for ambitious businesses." />
     <meta name="author" content="SISO AGENCY" />
-    <meta property="og:title" content="SISO AGENCY - UbahCrypt" />
-    <meta property="og:description" content="Build your next blockchain or crypto app with SISO AGENCY" />
-    <meta property="og:image" content="/images/siso-logo.svg" />
+    <meta property="og:title" content="SISO AGENCY" />
+    <meta property="og:description" content="Scalable Intelligence Systems Operator. We build and manage intelligent systems that scale with your business." />
+    <meta property="og:image" content="/lovable-uploads/c5921a2f-8856-42f4-bec5-2d08b81c5691.png" />
     <meta property="og:url" content="https://www.siso.agency" />
     <meta property="og:type" content="website" />
     <!-- Cross-Origin-Opener-Policy helps with security and storage access -->
